adjust font size of date and time

--- a/web/themes/colors/theme.html
+++ b/web/themes/colors/theme.html
@@ -147,7 +147,7 @@
 	<div id="nav-placeholder">
 	</div>
 	<div class="container-fluid px-1 py-3 my-5">
-		<div class="row d-flex align-items-center py-0 px-2 smallTextSize" style="color: var(--color-fg)">
+		<div class="row d-flex align-items-center py-0 px-2 regularTextSize" style="color: var(--color-fg)">
 			<div id="date" class="col text-left">
 				&nbsp;
 			</div>
