selectable widget width

--- a/web/themes/colors/theme.html
+++ b/web/themes/colors/theme.html
@@ -190,6 +190,8 @@
 											class="fa fa-palette px-0"></span> Farbschema Smart-Home-Geräte ändern</a>
 									<a class="dropdown-item" href="#" onclick="toggleSmartHomeSummary()"><span
 											class="fa fa-palette px-0"></span> Smarthome-Zusammenfassung an/aus </a>
+									<a class="dropdown-item" href="#" onclick="toggleWideBoxes()"><span
+											class="fa fa-palette px-0"></span> Breite Widgets an/aus </a>
 								</div>
 							</div>
 						</div>
@@ -242,7 +244,7 @@
 		</div>
 		<div class="row py-0 m-0 d-flex justify-content-center">
 			<!-- Ladepunkte (chargePointList) -->
-			<div class="col-lg-4 p-1 m-0">
+			<div class="col-lg-4 p-1 m-0 var-width">
 				<div class="wb-widget p-2 m-0 rounded shadow">
 					<div class="d-flex justify-content-between">
 						<h3 class="mt-0">Ladepunkte</h3>
@@ -257,7 +259,7 @@
 				</div>
 			</div>
 			<!-- Speicher (batteryList) -->
-			<div class="col-lg-4 p-1 m-0" id="batteryWidget">
+			<div class="col-lg-4 p-1 m-0 var-width" id="batteryWidget">
 				<div class="wb-widget p-2 m-0 rounded shadow">
 					<h3>Speicher</h3>
 					<div class="wb-subwidget p-0 ">
@@ -266,7 +268,7 @@
 				</div>
 			</div>
 			<!-- Smart Home (smartHomeList) -->
-			<div class="col-lg-4 p-1 m-0" id="smartHomeWidget">
+			<div class="col-lg-4 p-1 m-0 var-width" id="smartHomeWidget">
 				<div class="wb-widget p-2 m-0 rounded shadow">
 					<h3>Geräte</h3>
 					<div class="wb-subwidget p-0 ">
@@ -275,7 +277,7 @@
 				</div>
 			</div>
 			<!-- Preisbasiertes Laden -->
-			<div class="col-lg-4 p-1 m-0 priceConfiguration" id="priceConfigWidget">
+			<div class="col-lg-4 p-1 m-0 priceConfiguration var-width" id="priceConfigWidget">
 				<div class="wb-widget p-2 m-0 rounded shadow">
 					<h3 class="mt-0">Preisbasiertes Laden</h3>
 					<div class="p-0 wb-subwidget">
@@ -310,7 +312,7 @@
 
 
 			<!-- Ladepunkt Konfig -->
-			<div class="col-lg-4 p-1 m-0" id="chargePointConfigWidget">
+			<div class="col-lg-4 p-1 m-0 var-width" id="chargePointConfigWidget">
 				<div class="wb-widget p-2 m-0 rounded shadow">
 					<h3 class="mt-0">Einstellungen Ladepunkte</h3>
 					<div class="pb-3 wb-subwidget">
