prevent display gestures

--- a/web/display/colors/index.html
+++ b/web/display/colors/index.html
@@ -15,14 +15,14 @@
 	<script src="js/jquery-3.6.0.min.js"></script>
 	<script src="js/bootstrap-4.4.1/bootstrap.bundle.min.js"></script>
 	<!-- display style -->
-	<link rel="stylesheet" type="text/css" href="display/colors/style.css">
-	<script src="themes/colors/js/d3.v6.min.js"></script>
-	<script src="display/colors/powerdata.js"></script>
-	<script src="display/colors/powermeter.js"></script>
-	<script src="display/colors/yieldmeter.js"></script>
-	<script src="display/colors/powergraph.js"></script>
-	<script src="display/colors/chargePointList.js"></script>
-	<script src="display/colors/pricechart.js"></script>
+	<link rel="stylesheet" type="text/css" href="display/colors/style.css?ver=20230322">
+	<script src="themes/colors/js/d3.v6.min.js?ver=20230322"></script>
+	<script src="display/colors/powerdata.js?ver=20230322"></script>
+	<script src="display/colors/powermeter.js?ver=20230322"></script>
+	<script src="display/colors/yieldmeter.js?ver=20230322"></script>
+	<script src="display/colors/powergraph.js?ver=20230322"></script>
+	<script src="display/colors/chargePointList.js?ver=20230322"></script>
+	<script src="display/colors/pricechart.js?ver=20230322"></script>
 
 </head>
 
