display chargepoints in yieldmeter

--- a/web/themes/colors/theme.html
+++ b/web/themes/colors/theme.html
@@ -188,7 +188,9 @@
 											class="fa fa-sliders-h px-0"></span> Dezimalstellen kW & kWh ändern</a>
 									<a class="dropdown-item" href="#" onclick="switchSmartHomeColors()"><span
 											class="fa fa-palette px-0"></span> Farbschema Smart-Home-Geräte ändern</a>
-									<a class="dropdown-item" href="#" onclick="toggleSmartHomeSummary()"><span
+									<a class="dropdown-item" href="#" onclick="toggleChargepointSummary()"><span
+												class="fa fa-charging-station x-0"></span> Ladepunkt-Zusammenfassung an/aus </a>
+										<a class="dropdown-item" href="#" onclick="toggleSmartHomeSummary()"><span
 											class="fa fa-object-group px-0"></span> Smarthome-Zusammenfassung an/aus </a>
 									<a class="dropdown-item" href="#" onclick="toggleWideBoxes()"><span
 											class="fa fa-window-restore px-0"></span> Breite Widgets an/aus </a>
