add version to script tags

--- a/web/themes/colors/theme.html
+++ b/web/themes/colors/theme.html
@@ -104,10 +104,10 @@
 		$('head').append('<link rel="stylesheet" href="themes/' + themeCookie + '/style.css?v=20052020">');
 	</script>
 	<script src="themes/colors/js/d3.v6.min.js"></script>
-	<script src="themes/colors/powerdata.js"></script>
+	<script src="themes/colors/powerdata.js?v=20230401"></script>
 	<script src="themes/colors/powermeter.js"></script>
-	<script src="themes/colors/yieldmeter.js"></script>
-	<script src="themes/colors/powergraph.js"></script>
+	<script src="themes/colors/yieldmeter.js?v=20230401"></script>
+	<script src="themes/colors/powergraph.js?v=20230401"></script>
 	<script src="themes/colors/chargePointList.js"></script>
 	<script src="themes/colors/smartHomeList.js"></script>
 	<script src="themes/colors/batteryList.js"></script>
