--- a/web/tools/trace/modtest.html
+++ b/web/tools/trace/modtest.html
@@ -1,7 +1,10 @@
-<form action="modtest.php" method="get"> 
-<p>Modtest Ip Adresse vom Modbusdevice : <input type="text" name="ip" /></p> 
-<p>Startadresse: <input type="text" name="start" /></p> 
-<p>Laenge: <input type="text" name="len"/></p>
-<p>Modbus id (normalerweise 1): <input type="text" name="id"/></p>
-<p>Function 3 read input register else read holding register: <input type="text" name="fun"/></p> 
-<p><input type="submit" /></p> </form>
+<form action="modtest.php" method="get">
+    <p>Modtest IP-Adresse vom Modbusdevice : <input type="text" name="ip" /></p>
+    <p>Port vom Modbusdevice : <input type="text" name="port" /></p>
+    <p>Modbus ID (normalerweise 1): <input type="text" name="id" /></p>
+    <p>Startadresse: <input type="text" name="start" /></p>
+    <p>Anzahl: <input type="text" name="len" /></p>
+    <p>Datentyp (zB FLOAT_16): <input type="text" name="data_type" /></p>
+    <p>Function 0 = read input register; 1 = read holding register: <input type="text" name="func" /></p>
+    <p><input type="submit" /></p>
+</form>
